--- a/content/sjl/maturita2018-3710.md
+++ b/content/sjl/maturita2018-3710.md
@@ -18,4 +18,18 @@
 
 17 - D
 18 - B
-19 - 
+19 - C
+20 - A
+21 - C
+22 - Hlad
+23 - aglomerácia
+24 - 2007
+25 - a
+26 - a
+27 - a
+28 - b
+29 - d
+30 - renesancia
+31 - 
+32 - vokáň, dĺžeň, mäkčeň
+
